--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,5 @@
 }
 .sec-container {
   max-width: 1600px;
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
+  margin: 0 auto;
 }
